tests/integration/snapshots/integration__remove__delete_package_from_one_realm.snap
---
source: tests/integration/remove.rs
expression: "fs_err::read_to_string((&project).path().join(\"wally.toml\")).unwrap()"
---
[package]
name = "biff/duplicate-alias-different-realms"
version = "0.1.0"
license = "MIT"
realm = "server"
registry = "test-registries/primary-registry"

[dependencies]
Minimal = "biff/minimal-shared@0.1.0"

