tests/integration/snapshots/integration__remove__delete_target.snap
---
source: tests/integration/remove.rs
expression: "fs_err::read_to_string((&project).path().join(\"wally.toml\")).unwrap()"
---
[package]
name = "biff/one-dependency"
version = "0.1.0"
license = "MIT"
realm = "server"
registry = "test-registries/primary-registry"

